; ModuleID = '/home/carl/AnghaBench/lab/q3map2/q3map2/extr_portals.c_AllocPortal.c'
source_filename = "/home/carl/AnghaBench/lab/q3map2/q3map2/extr_portals.c_AllocPortal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@numthreads = common dso_local global i32 0, align 4
@c_active_portals = common dso_local global i64 0, align 8
@c_peak_portals = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @AllocPortal() #0 {
  %1 = alloca i32*, align 8
  %2 = load i32, i32* @numthreads, align 4
  %3 = icmp eq i32 %2, 1
  br i1 %3, label %4, label %7

4:                                                ; preds = %0
  %5 = load i64, i64* @c_active_portals, align 8
  %6 = add nsw i64 %5, 1
  store i64 %6, i64* @c_active_portals, align 8
  br label %7

7:                                                ; preds = %4, %0
  %8 = load i64, i64* @c_active_portals, align 8
  %9 = load i64, i64* @c_peak_portals, align 8
  %10 = icmp sgt i64 %8, %9
  br i1 %10, label %11, label %13

11:                                               ; preds = %7
  %12 = load i64, i64* @c_active_portals, align 8
  store i64 %12, i64* @c_peak_portals, align 8
  br label %13

13:                                               ; preds = %11, %7
  %14 = call i32* @safe_malloc(i32 4)
  store i32* %14, i32** %1, align 8
  %15 = load i32*, i32** %1, align 8
  %16 = call i32 @memset(i32* %15, i32 0, i32 4)
  %17 = load i32*, i32** %1, align 8
  ret i32* %17
}

declare dso_local i32* @safe_malloc(i32) #1

declare dso_local i32 @memset(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
